[package]
name = "seed-cloud-processor"
version = "0.1.0"
authors = ["Mike Holt <mike.n.holt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.31.2"
shiplift = "0.5.0"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_debug"] }
sloggers = "0.3.4"
tokio = "0.1.22"

# reqwest = "0.9.19"
